<resources>
    <string name="app_name">Slider</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_text">First Fragment</string>
    <string name="next_button"><![CDATA[Next >]]></string>
    <string name="second_fragment_title">Let\'s Play</string>
    <string name="previous_button">Previous</string>
    <string name="third_fragment_title">WINNER!</string>
    <string name="preview_button"><![CDATA[< Previous]]></string>
    <string name="second_activity">Second Activity</string>
    <string name="third_activity">Third Activity</string>
    <string name="login_id">Enter name</string>
    <string name="login_password">Enter password</string>
    <string name="login">Log In</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="startButton">Start</string>
    <string name="playButton">Play</string>
    <string name="initial_score">Score</string>
</resources>