<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/second_activity_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:text="@string/second_activity"
            android:textAlignment="center"
            android:textSize="@dimen/next_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/second_activity_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_activity_title"
            android:backgroundTint="@color/teal_700"/>

        <Button
            android:id="@+id/second_activity_previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/preview_button"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/second_activity_next_button"
            app:layout_constraintEnd_toStartOf="@+id/second_activity_next_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/teal_700"/>
    </androidx.constraintlayout.widget.ConstraintLayout></layout>